# wm-states

./: .gitignore  README.md  pyproject.toml
configs/: diagnostic_figure_config.json  diagnostic_figure_config.template.json  loo_cue_labels.json
methods/: cell_trial_selection.md  decoding_confidence.md  methods.md  on_off_states.md
scripts/: cell_trial_selection.py  decoding_confidence.py  on_off_states.py
scripts/simulation/: test_r.py
